# render-workflow-agents-workshop-py

./: README.md  pyproject.toml
scripts/: setup_attendee.py
shared/agent/: pyproject.toml
shared/agent/src/workshop_agent/: __init__.py  agent.py  agents.py  filter_diff.py  helpers.py  logger.py  loop.py  model.py  model_tiers.py  prepare_diff.py  review.py  tool_registry.py  types.py
shared/agent/src/workshop_agent/tools/: contrast_ratio.py  current_time.py  diff_stats.py  loader.py  scan_for_secrets.py  tool.py
shared/db/: pyproject.toml
shared/db/src/workshop_db/: __init__.py  memory.py  types.py
shared/ui/: pyproject.toml
shared/ui/src/workshop_ui/: __init__.py
tests/: conftest.py
tests/e2e/: test_naive_e2e.py  test_workflow_e2e.py
tests/integration/: test_agent_task.py  test_naive_app.py  test_queue_app.py  test_queue_kv.py  test_workflow_app.py  test_workflow_dispatch.py
tests/unit/: test_agents.py  test_db_memory.py  test_filter_diff.py  test_model.py  test_parse_decision.py  test_setup_attendee.py  test_tools.py  test_ui.py
workshop/: facilitator-guide.md
