[project]
name = "workshop-db"
version = "1.0.0"
description = "Telemetry store: reviews, findings, and agent spans (Postgres or in-memory)."
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30",
    "workshop-agent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workshop_db"]
